--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "css-loader": "^0.28.7",
     "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react-dom": "^15.6.1",
+    "style-loader": "^0.18.2"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
